# MedVLM-Probe

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
datasets/: __init__.py
examples/: basic_usage.py  compare_models.py  custom_probe.py
models/: __init__.py
probes/: __init__.py  base.py  classification.py  consistency.py  grounding.py  swap.py
visualizations/: __init__.py
