[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medvlm-probe"
version = "0.1.0"
description = "Checking Visual Reasoning in Medical Vision-Language Models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vedant Malik", email = "vedantmac@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "medical-ai",
    "vision-language-model",
    "radiology",
    "chest-xray",
    "vlm-evaluation",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "qwen-vl-utils>=0.0.2",
]

[project.optional-dependencies]
viz = ["plotly>=5.18.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "isort>=5.12.0"]
all = ["plotly>=5.18.0", "pytest>=7.0.0", "black>=23.0.0"]

[project.scripts]
medvlm-probe = "medvlm_probe.cli:main"

[project.urls]
Homepage = "https://github.com/Ved02ai/MedVLM-Probe"
Repository = "https://github.com/Ved02ai/MedVLM-Probe"

[tool.setuptools.packages.find]
include = ["medvlm_probe*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
